@@ -2402,6 +2402,7 @@ CREATE TABLE messages (
 	type 	smallint	DEFAULT '0' NOT NULL,
 	userid 	int(11)		DEFAULT NULL,
 	sender 	varchar(255) 	DEFAULT NULL,
+	contenttype 	varchar(255) 	DEFAULT 'text/plain',
         PRIMARY KEY (id),
 	INDEX cdate (cdate, type),
 	INDEX userid (userid),
@@ -3569,4 +3570,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2019100900');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2019100901');
